--- a/Houston, We Have a Problem.inform/Index/Details/80_A.html
+++ b/Houston, We Have a Problem.inform/Index/Details/80_A.html
@@ -202,35 +202,11 @@
 <p class="tightin1">A single action in detail.<br><i>About the action rulebooks&nbsp;&nbsp;<a href=inform:/doc188.html><img border=0 src=inform:/help.png></a></i></p>
 </font></td></tr></table></font></td><td width="8"></td></tr><tr><td width="8"><img src="inform:/bl_corner_e0e0e0.gif" width="8" height="8" border="0" alt="..." /></td><td></td><td width="8"><img src="inform:/br_corner_e0e0e0.gif" width="8" height="8" border="0" alt="..." /></td></tr></table></p><p>
 <!--NAVIGATION ENDS-->
-<b>Standard actions which change the state of things</b><br>Locking it with&nbsp;<a href=16_A.html><img border=0 src=inform:/Beneath.png></a>, Unlocking it with&nbsp;<a href=17_A.html><img border=0 src=inform:/Beneath.png></a>, Switching on&nbsp;<a href=18_A.html><img border=0 src=inform:/Beneath.png></a>, Switching off&nbsp;<a href=19_A.html><img border=0 src=inform:/Beneath.png></a>, <b>Opening</b>&nbsp;<a href=20_A.html><img border=0 src=inform:/Beneath.png></a>, Closing&nbsp;<a href=21_A.html><img border=0 src=inform:/Beneath.png></a>, Wearing&nbsp;<a href=22_A.html><img border=0 src=inform:/Beneath.png></a>, Taking off&nbsp;<a href=23_A.html><img border=0 src=inform:/Beneath.png></a><p><hr><p><b>Opening <font color="#000080">something</font> </b><a name=Open></a> (<i>past tense</i> opened)<br>
-<p>Opening makes something no longer
-a physical barrier. The action can be performed on any kind of thing which
-provides the either/or properties openable and open. The 'can't open unless
-openable rule' tests to see if the noun both can be and actually is openable.
-(It is assumed that anything which can be openable can also be open.)
-In the Standard Rules, the container and door kinds both satisfy these
-requirements.<br><br>In the event that the thing to be opened is also lockable, we are forbidden
-to open it when it is locked. Both containers and doors can be lockable,
-but the opening and closing actions would also work fine with kinds which
-cannot be.<br><br>We can create a new kind on which opening and closing will work thus:
-'A case file is a kind of thing. A case file can be openable.
-A case file can be open. A case file is usually openable and closed.'<br><br>The meaning of open and closed is different for different kinds of thing.
-When a container is closed, that means people outside cannot reach in,
-and vice versa; when a door is closed, people cannot use the 'going' action
-to pass through it. If we were to create a new kind such as 'case file',
-we would also need to write rules to make the open and closed properties
-interesting for this kind.<p><hr><p><b>Typed commands leading to this action</b><p>
-<p class="hangingin2">&quot;open [something]&quot;</p><p><b>Rules controlling this action</b><p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>opening the textbook</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line14"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>opening the textbook</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line19"><img border=0 src=inform:/Reveal.tif></a></p>
-<br><p class="hangingin2">check&nbsp;&nbsp;&nbsp;&nbsp;<i>an actor opening</i>&nbsp;&nbsp;<font color="#800000">can't open unless openable rule</font>&nbsp;&nbsp;<a href="javascript:pasteCode('can[=0x0027=]t open unless openable rule')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <a href="javascript:pasteCode('The can[=0x0027=]t open unless openable rule is not listed in the check opening rulebook.[=0x000A=]')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i></p>
-<p class="hangingin2">check&nbsp;&nbsp;&nbsp;&nbsp;<i>an actor opening</i>&nbsp;&nbsp;<font color="#800000">can't open what's locked rule</font>&nbsp;&nbsp;<a href="javascript:pasteCode('can[=0x0027=]t open what[=0x0027=]s locked rule')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <a href="javascript:pasteCode('The can[=0x0027=]t open what[=0x0027=]s locked rule is not listed in the check opening rulebook.[=0x000A=]')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i></p>
-<p class="hangingin2">check&nbsp;&nbsp;&nbsp;&nbsp;<i>an actor opening</i>&nbsp;&nbsp;<font color="#800000">can't open what's already open rule</font>&nbsp;&nbsp;<a href="javascript:pasteCode('can[=0x0027=]t open what[=0x0027=]s already open rule')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <a href="javascript:pasteCode('The can[=0x0027=]t open what[=0x0027=]s already open rule is not listed in the check opening rulebook.[=0x000A=]')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i></p>
-<br><p class="hangingin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;<i>an actor opening</i>&nbsp;&nbsp;<font color="#800000">standard opening rule</font>&nbsp;&nbsp;<a href="javascript:pasteCode('standard opening rule')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <a href="javascript:pasteCode('The standard opening rule is not listed in the carry out opening rulebook.[=0x000A=]')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i></p>
-<br><p class="hangingin2">after&nbsp;&nbsp;&nbsp;&nbsp;<i>opening the storage locker</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line88"><img border=0 src=inform:/Reveal.tif></a></p>
-<p class="hangingin2">after&nbsp;&nbsp;&nbsp;&nbsp;<i>opening the desk</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line104"><img border=0 src=inform:/Reveal.tif></a></p>
-<br><p class="hangingin2">report&nbsp;&nbsp;&nbsp;&nbsp;<i>an actor opening</i>&nbsp;&nbsp;<font color="#800000">reveal any newly visible interior rule</font>&nbsp;&nbsp;<a href="javascript:pasteCode('reveal any newly visible interior rule')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <a href="javascript:pasteCode('The reveal any newly visible interior rule is not listed in the report opening rulebook.[=0x000A=]')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i></p>
-<p class="hangingin2">report&nbsp;&nbsp;&nbsp;&nbsp;<i>an actor opening</i>&nbsp;&nbsp;<font color="#800000">standard report opening rule</font>&nbsp;&nbsp;<a href="javascript:pasteCode('standard report opening rule')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <a href="javascript:pasteCode('The standard report opening rule is not listed in the report opening rulebook.[=0x000A=]')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i></p>
+<b>Talking to</b>&nbsp;<a href="source:story.ni#line45"><img border=0 src=inform:/Reveal.tif></a>&nbsp;<a href=80_A.html><img border=0 src=inform:/Beneath.png></a><p><hr><p><b>Talking to <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line45"><img border=0 src=inform:/Reveal.tif></a><a name=A80_talking_to></a> (<i>past tense</i> talked to)<br>
+<p><hr><p><b>Typed commands leading to this action</b><p>
+<p class="hangingin2">&quot;talk to [someone]&quot;&nbsp;<a href="source:story.ni#line46"><img border=0 src=inform:/Reveal.tif></a></p><p class="hangingin2">&quot;converse with
+[someone]&quot;&nbsp;<a href="source:story.ni#line47"><img border=0 src=inform:/Reveal.tif></a></p><p><b>Rules controlling this action</b><p>
+<p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>talking to the astronaut</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line49"><img border=0 src=inform:/Reveal.tif></a></p>
 <br><p>
 <!--CONTENT ENDS-->
 </font></body></html>
