--- a/Houston, We Have a Problem.inform/Index/Details/84_A.html
+++ b/Houston, We Have a Problem.inform/Index/Details/84_A.html
@@ -202,17 +202,15 @@
 <p class="tightin1">A single action in detail.<br><i>About the action rulebooks&nbsp;&nbsp;<a href=inform:/doc188.html><img border=0 src=inform:/help.png></a></i></p>
 </font></td></tr></table></font></td><td width="8"></td></tr><tr><td width="8"><img src="inform:/bl_corner_e0e0e0.gif" width="8" height="8" border="0" alt="..." /></td><td></td><td width="8"><img src="inform:/br_corner_e0e0e0.gif" width="8" height="8" border="0" alt="..." /></td></tr></table></p><p>
 <!--NAVIGATION ENDS-->
-<b>Standard actions concerning the actor's vision</b><br>Looking&nbsp;<a href=11_A.html><img border=0 src=inform:/Beneath.png></a>, Examining&nbsp;<a href=12_A.html><img border=0 src=inform:/Beneath.png></a>, Looking under&nbsp;<a href=13_A.html><img border=0 src=inform:/Beneath.png></a>, Searching&nbsp;<a href=14_A.html><img border=0 src=inform:/Beneath.png></a>, <b>Consulting it about</b>&nbsp;<a href=15_A.html><img border=0 src=inform:/Beneath.png></a><p><hr><p><b>Consulting <font color="#000080">something</font> about <font color="#000080">some text</font> </b><a name=Consult></a> (<i>past tense</i> consulted it about)<br>
-<p>Consulting is a very
-flexible and potentially powerful action, but only because it leaves almost
-all of the work to the author to deal with directly. The idea is for it to
-respond to commands such as LOOK UP HENRY FITZROY IN HISTORY BOOK, where
-the topic would be the snippet of command HENRY FITZROY and the thing would
-be the book.<br><br>The Standard Rules simply parry such requests by saying that the player finds
-nothing of interest. All interesting responses must be provided by the author,
-using rules like 'Instead of consulting the history book about...'<p><hr><p><b>Typed commands leading to this action</b><p>
-<p class="hangingin2">&quot;look up [text] in [something]&quot; <i>reversed</i></p><p class="hangingin2">&quot;consult [something] on/about [text]&quot;</p><p><b>Rules controlling this action</b><p>
-<p class="hangingin2">report&nbsp;&nbsp;&nbsp;&nbsp;<i>an actor consulting something about</i>&nbsp;&nbsp;<font color="#800000">block consulting rule</font>&nbsp;&nbsp;<a href="javascript:pasteCode('block consulting rule')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <a href="javascript:pasteCode('The block consulting rule is not listed in the report consulting it about rulebook.[=0x000A=]')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i></p>
+Talking to&nbsp;<a href="source:story.ni#line66"><img border=0 src=inform:/Reveal.tif></a>&nbsp;<a href=80_A.html><img border=0 src=inform:/Beneath.png></a>, Lockpicking&nbsp;<a href="source:story.ni#line88"><img border=0 src=inform:/Reveal.tif></a>&nbsp;<a href=81_A.html><img border=0 src=inform:/Beneath.png></a>, Fixing&nbsp;<a href="source:story.ni#line101"><img border=0 src=inform:/Reveal.tif></a>&nbsp;<a href=82_A.html><img border=0 src=inform:/Beneath.png></a>, Reading&nbsp;<a href="source:story.ni#line158"><img border=0 src=inform:/Reveal.tif></a>&nbsp;<a href=83_A.html><img border=0 src=inform:/Beneath.png></a>, <b>Combining it with</b>&nbsp;<a href="source:story.ni#line174"><img border=0 src=inform:/Reveal.tif></a>&nbsp;<a href=84_A.html><img border=0 src=inform:/Beneath.png></a><p><hr><p><b>Combining <font color="#000080">something</font> with <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line174"><img border=0 src=inform:/Reveal.tif></a><a name=A84_combining_it_with></a> (<i>past tense</i> combined it with)<br>
+<p><hr><p><b>Typed commands leading to this action</b><p>
+<p class="hangingin2">&quot;combine [something] with [something]&quot;&nbsp;<a href="source:story.ni#line174"><img border=0 src=inform:/Reveal.tif></a></p><p class="hangingin2">&quot;attach [something] to [something]&quot;&nbsp;<a href="source:story.ni#line176"><img border=0 src=inform:/Reveal.tif></a></p><p><b>Named values belonging to this action</b><p>
+item built&nbsp;<a href="source:story.ni#line205"><img border=0 src=inform:/Reveal.tif></a> - <i>object</i><br>
+<p><b>Rules controlling this action</b><p>
+<p class="hangingin2">set action variables for&nbsp;&nbsp;&nbsp;&nbsp;<i>combining something with something</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line207"><img border=0 src=inform:/Reveal.tif></a></p>
+<br><p class="hangingin2">check&nbsp;&nbsp;&nbsp;&nbsp;(if the item built is nothing, say "You can't combine [the noun] and [the second noun] into anything useful." instead)&nbsp;<a href="source:story.ni#line218"><img border=0 src=inform:/Reveal.tif></a></p>
+<br><p class="hangingin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(move the item built to the holder of the noun; ...)&nbsp;<a href="source:story.ni#line222"><img border=0 src=inform:/Reveal.tif></a></p>
+<br><p class="hangingin2">report&nbsp;&nbsp;&nbsp;&nbsp;(say "You now have [an item built].")&nbsp;<a href="source:story.ni#line227"><img border=0 src=inform:/Reveal.tif></a></p>
 <br><p>
 <!--CONTENT ENDS-->
 </font></body></html>
